--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=BCTTPS
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/Mainmenu_level.Mainmenu_level
-GameDefaultMap=/Game/ThirdPersonBP/Maps/Mainmenu_level.Mainmenu_level
+EditorStartupMap=/Game/ThirdPersonBP/Maps/pak_level.pak_level
+GameDefaultMap=/Game/ThirdPersonBP/Maps/pak_level.pak_level
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -79,5 +79,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
